--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <a class="brand" href="/quiz1">Nay's</a>
       <nav>
         <a href="/quiz1">Home</a>
-        <a href="/quiz1/profile">Profile</a>
-        <a href="/quiz1/hometown">Hometown</a>
-        <a href="/quiz1/food">Local Food</a>
-        <a href="/quiz1/tourist">Tourist Places</a>
+        <a href="/quiz1/profile/index.html">Profile</a>
+        <a href="/quiz1/hometown.index.html">Hometown</a>
+        <a href="/quiz1/food/index.html">Local Food</a>
+        <a href="/quiz1/tourist/index.html">Tourist Places</a>
       </nav>
     </div>
   </header>
@@ -48,4 +48,5 @@
 
   <script src="js/main.js"></script>
 </body>
+
 </html>
