--- a/profile/index.html
+++ b/profile/index.html
@@ -18,10 +18,10 @@
       <a class="brand" href="/quiz1">Nay's</a>
       <nav>
         <a href="/quiz1">Home</a>
-        <a href="profile/index.html">Profile</a>
-        <a href="hometown/index.html">Hometown</a>
-        <a href="food/index.html">Local Food</a>
-        <a href="tourist/index.html">Tourist Places</a>
+        <a href="profile/">Profile</a>
+        <a href="hometown/">Hometown</a>
+        <a href="food/">Local Food</a>
+        <a href="tourist/">Tourist Places</a>
       </nav>
     </div>
   </header>
