--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a href="/quiz1">Home</a>
         <a href="/quiz1/profile/index.html">Profile</a>
-        <a href="/quiz1/hometown.index.html">Hometown</a>
+        <a href="/quiz1/hometown/index.html">Hometown</a>
         <a href="/quiz1/food/index.html">Local Food</a>
         <a href="/quiz1/tourist/index.html">Tourist Places</a>
       </nav>
@@ -50,3 +50,4 @@
 </body>
 
 </html>
+
