--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="container">
       <a class="brand" href="/quiz1">Nay's</a>
       <nav>
-        <a href="/quiz1">Home</a>
-        <a href="/quiz1/profile/index.html">Profile</a>
-        <a href="/quiz1/hometown/index.html">Hometown</a>
-        <a href="/quiz1/food/index.html">Local Food</a>
-        <a href="/quiz1/tourist/index.html">Tourist Places</a>
-      </nav>
+        <a href="index.html">Home</a>
+        <a href="profile/index.html">Profile</a>
+        <a href="hometown/index.html">Hometown</a>
+        <a href="food/index.html">Local Food</a>
+        <a href="tourist/index.html">Tourist Places</a>
+      </nav>
     </div>
   </header>
 
@@ -50,4 +50,5 @@
 </body>
 
 </html>
+
 
